// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxModalFooter customize 1`] = `
<div>
  <div
    class="modal-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxModalFooter component 1`] = `
<div>
  <div
    class="modal-footer"
  >
    Test
  </div>
</div>
`;
